update readme, update ui and add not found and icon component

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "description": "Twilo is your go-to platform for effortless blogging. Share your thoughts, ideas, and stories with a community of readers. Whether you're writing for fun or building an audience, Twilo makes it easy to get started and grow.",
+  "description": "Twilo is your go-to platform for seamless blogging. Share your stories, ideas, and creativity with a vibrant community of readers and writers. Whether you're writing for fun, exploring fresh perspectives, or building your audience, Twilo makes it simple to grow and connect.",
   "keywords": [
     "twilo",
     "twilo blogs",
