--- a/.env-sample
+++ b/.env-sample
@@ -2,5 +2,6 @@ VITE_APPWRITE_URL=""
 VITE_APPWRITE_PROJECT_ID=""
 VITE_APPWRITE_DATABASE_ID=""
 VITE_APPWRITE_USERS_COLLECTION_ID=""
+VITE_APPWRITE_CONNECTIONS_COLLECTION_ID=""
 VITE_APPWRITE_POSTS_COLLECTION_ID=""
 VITE_APPWRITE_BUCKET_ID=""
