--- a/.env-sample
+++ b/.env-sample
@@ -4,4 +4,5 @@ VITE_APPWRITE_DATABASE_ID=""
 VITE_APPWRITE_USERS_COLLECTION_ID=""
 VITE_APPWRITE_CONNECTIONS_COLLECTION_ID=""
 VITE_APPWRITE_POSTS_COLLECTION_ID=""
+VITE_APPWRITE_COMMENTS_COLLECTION_ID=""
 VITE_APPWRITE_BUCKET_ID=""
