--- a/.env-sample
+++ b/.env-sample
@@ -6,3 +6,4 @@ VITE_APPWRITE_CONNECTIONS_COLLECTION_ID=""
 VITE_APPWRITE_POSTS_COLLECTION_ID=""
 VITE_APPWRITE_COMMENTS_COLLECTION_ID=""
 VITE_APPWRITE_BUCKET_ID=""
+VITE_TINYMCE_API_KEY=""
