--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
